update user account

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="flex justify-center mt-10">
-      <img class="object-cover w-full h-96 rounded-xl lg:w-4/5" src="assets/images/noah-buscher-x8ZStukS2PM-unsplash.jpg" />
+      <img class="object-cover w-full h-96 rounded-xl lg:w-4/5" src="assets/images/pa_wrap_recycle_013.webp" />
     </div>
     <app-about></app-about>
 
