--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -49,7 +49,17 @@
           *ngIf="userForm.get('birthDate')?.invalid && userForm.get('birthDate')?.touched"
           class="text-red-500"
         >
-          Valid birth date is required
+           birth date is required
+        </small>
+      </div>
+      <div>
+        <label class="text-gray-700 dark:text-gray-200" for="city">City</label>
+        <input id="city" formControlName="city" type="text" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-200 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-green-400 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-green-300">
+        <small
+          *ngIf="userForm.get('city')?.invalid && userForm.get('city')?.touched"
+          class="text-red-500"
+        >
+          city is required
         </small>
       </div>
     </div>
@@ -57,7 +67,7 @@
       <button
         type="submit"
         [disabled]="userForm.invalid"
-        class="px-8 py-2.5 leading-5 text-white transition-colors duration-300 transform bg-green-700 rounded-md hover:bg-green-600 focus:outline-none focus:bg-green-600">Save</button>
+        class="px-8 py-2.5 leading-5 text-white transition-colors duration-300 transform bg-green-700 disabled:bg-green-800/50 rounded-md hover:bg-green-600 focus:outline-none focus:bg-green-600">Save</button>
     </div>
   </form>
 </section>
