--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -161,7 +161,7 @@
           <button
             type="submit"
             [disabled]="registrationForm.invalid"
-            class="inline-block shrink-0 rounded-md  bg-green-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-green-400  focus:ring-3 focus:outline-hidden"
+            class="inline-block shrink-0 rounded-md disabled:opacity-50 disabled:cursor-not-allowed bg-green-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-green-400  focus:ring-3 focus:outline-hidden"
           >
             Create an account
           </button>
