--- a/src/app/collector/collection/collections/collections.component.html
+++ b/src/app/collector/collection/collections/collections.component.html
@@ -1,4 +1,4 @@
-<section class="container px-4 mx-auto">
+<section class="container px-4 mx-auto" *ngIf="(collections$ | async) as collections">
   <div class="flex items-center gap-x-3">
     <h2 class="text-lg font-medium text-gray-800 dark:text-white">My Collections</h2>
 
