--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -67,7 +67,7 @@
       <button
         type="submit"
         [disabled]="userForm.invalid"
-        class="px-8 py-2.5 leading-5 text-white transition-colors duration-300 transform bg-green-700 disabled:bg-green-800/50 rounded-md hover:bg-green-600 focus:outline-none focus:bg-green-600">Save</button>
+        class="px-8 py-2.5 leading-5 text-white transition-colors duration-300 disabled:opacity-50 disabled:cursor-not-allowed transform bg-green-700 disabled:bg-green-800/50 rounded-md hover:bg-green-600 focus:outline-none focus:bg-green-600">Save</button>
     </div>
   </form>
 </section>
